fix spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -627,10 +627,7 @@ input:-webkit-autofill {
 
 @media (min-width: 2560px) {
     .shift-content {
- i425_adapt-small-screens
-        @apply mx-auto px-[10%];
-
-        @apply m-auto ml-[10%];
+        @apply mx-auto px-[10%] ml-[12%];
     }
 }
 
